Add website source link in footer and fix aside spacing

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 		<div class="footer-container">
 			<footer class="wrapper">
 				<h3>Max Leiter</h3>
+				<a href="https://github.com/MaxLeiter/maxleiter.github.io" id="source">Website source</a>
 			</footer>
 		</div>
 
