Misc fixes: ionicons, capitilize github

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<link rel="stylesheet" href="css/normalize.min.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+		<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 		<!--[if lt IE 9]>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
 			<script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
@@ -25,36 +25,36 @@
 						<hr>
 					</header>
 					<section>
-						<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">github</a> / <a href="https://maxleiter.github.io/jsonTree/">website</a> / <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
+						<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> / <a href="https://maxleiter.github.io/jsonTree/">website</a> / <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
 						<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
 					</section>
 					<section>
-						<h3>lounge-bot</h3> <span class="after"><a href="https://github.com/thelounge/lounge-bot">github</a><a class="box" href="https://github.com/thelounge/lounge-bot">creator</a></span>
+						<h3>lounge-bot</h3> <span class="after"><a href="https://github.com/thelounge/lounge-bot">GitHub</a><a class="box" href="https://github.com/thelounge/lounge-bot">creator</a></span>
 						<p>A modular JavaScript IRC bot for <code>#thelounge</code> on Freenode. It's primary use is fetching  requested issue and pull request information.</p>
 					</section>
 					<section>
-						<h3>TheLounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">github</a> / <a href="https://thelounge.github.io">website</a> / <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
+						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> / <a href="https://thelounge.github.io">website</a> / <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
 						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, and (upcoming) <a href="https://github.com/thelounge/lounge/pull/1271">localization support</a>. </p>
 					</section>
 					<section>
-						<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">github</a> / <a href="http://knightos.org">website</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Aknightos+author%3AMaxLeiter&type=">contributor</a></span>
+						<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> / <a href="http://knightos.org">website</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Aknightos+author%3AMaxLeiter&type=">contributor</a></span>
 						<p>A open-source unix-like operating system for z80-based calculators written entirely in z80 asm. I wrote C bindings for the both <a href="https://github.com/knightos/libc">the kernel</a> and <a href="https://github.com/KnightOS/corelib/blob/master/bindings.c">the userspace</a>. Additionally contributed to <a href="https://github.com/KnightOS/z80e">z80e</a>, the emulator, and wrote the <a href="http://www.knightos.org/documentation/tutorials/getting-started-c/">C tutorials.</a> </p>
 					</section>
 				</article>
 
 				<aside>
-					<h3>Max Leiter <span id="resume"><a href="mailto:contact@maxleiter.com">(Request résumé)</a></span></h3>
+					<h3>Max Leiter <span id="resume"><a href="mailto:contact@maxleiter.com">(Request resume)</a></span></h3>
 					<p>Highschool senior in the Bay Area.</p>
 					<p>
-						<i class="fa fa-github"></i>
+						<i class="ionicons ion-social-github"></i>
 						<a href="https://github.com/MaxLeiter">MaxLeiter</a>
 					</p>
 					<p>
-						<i class="fa fa-pencil"></i>
+						<i class="ionicons ion-edit"></i>
 						<a href="mailto:hello@maxleiter.com">hello@maxleiter.com</a>
 					</p>
 					<p>
-						<i class="fa fa-hashtag"></i>
+						<i class="ionicons ion-pound"></i>
 						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter">MaxLeiter on Freenode</a>
 					</p>
 				</aside>
@@ -77,7 +77,7 @@
 		<div class="footer-container">
 			<footer class="wrapper">
 				<h3>Max Leiter</h3>
-				<a href="https://github.com/MaxLeiter/maxleiter.github.io" id="source">Website source</a>
+				<a href="https://github.com/MaxLeiter/maxleiter.github.io" id="source">Source on GitHub</a>
 			</footer>
 		</div>
 
