--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 						<hr>
 					</header>
 					<section>
+						<h3>A* Puzzle Solver</h3> <span class="after"><a href="https://github.com/MaxLeiter/SlidingNumberPuzzle">GitHub</a><a class="box" href="https://github.com/MaxLeiter/SlidingNumberPuzzle">creator</a></span>
+						<p>A simple AI for solving sliding block number puzzles. Written in Java for my Artificial Intelligence independent study in 2017.</p>
+					</section>
+					<section>
 						<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> / <a href="https://maxleiter.github.io/jsonTree/">website</a> / <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
 						<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
 					</section>
