Add relevant classes. Possibly temporary

--- a/index.html
+++ b/index.html
@@ -75,6 +75,25 @@
 						Technical Intern &mdash; Five9 Network Systems
 					</p>
 				</aside>
+				<aside>
+					<h3>Relevant Classes</h3>
+					<p>
+						<strong>Artificial Intelligence</strong>
+						<hr>
+						A semester long independent study using <i>Artificial Intelligence: A Modern Approach (Third edition)</i> by Stuart Russell and Peter Norvig.
+
+					</p>
+					<p>
+						<strong>Data Structures & Algorithms</strong>
+						<hr>
+						An advanced (for highschool) computer science course using <i>Algorithms, 4th Edition</i> by Robert Sedgewick and Kevin Wayne. Covered sorting, searching, and graph theory.
+					</p>
+					<p>
+						<strong>AP Computer Science</strong>
+						<hr>
+						Re-enforced concepts that were previously self-taught and looks good on college applications.
+					</p>
+				</aside>
 			</div>
 		</div>
 
