--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 						<p>A modular JavaScript IRC bot for <code>#thelounge</code> on Freenode. It's primary use is fetching  requested issue and pull request information.</p>
 					</section>
 					<section>
+						<h3>aerc</h3> <span class="after"><a href="https://github.com/sircmpwn/aerc">GitHub</a><a class="box" href="https://github.com/SirCmpwn/aerc/commits?author=MaxLeiter">contributor</a></span>
+						<p>An asynchronous email client for your terminal. Contributions include <a href="https://github.com/SirCmpwn/aerc/pull/37">OS X support</a>, <a href="https://github.com/SirCmpwn/aerc/pull/57">command history</a>, and <a href="https://github.com/SirCmpwn/aerc/pull/95/files">general</a> <a href="https://github.com/SirCmpwn/aerc/pull/93/files">bug</a> <a href="https://github.com/SirCmpwn/aerc/pull/94">fixes.</a> </p>
+					</section>
+					<section>
 						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> / <a href="https://thelounge.github.io">website</a> / <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
 						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, and (upcoming) <a href="https://github.com/thelounge/lounge/pull/1271">localization support</a>. </p>
 					</section>
