--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 					</p>
 					<p>
-						<strong>Data Structures & Algorithms</strong>
+						<strong>Data Structures &amp; Algorithms</strong>
 						<hr>
 						An advanced (for highschool) computer science course using <i>Algorithms, 4th Edition</i> by Robert Sedgewick and Kevin Wayne. Covered sorting, searching, and graph theory.
 					</p>
