Colleges may see this.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<p>
 						<strong>AP Computer Science</strong>
 						<hr>
-						Re-enforced concepts that were previously self-taught and looks good on college applications.
+						Re-enforced concepts that were previously self-taught.
 					</p>
 				</aside>
 			</div>
