--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
 						<hr>
 					</header>
 					<section>
+						<h3>3D Tic Tac Toe AI</h3> <span class="after"><a href="https://github.com/MaxLeiter/3DTicTacToe">GitHub</a><a class="box" href="https://github.com/MaxLeiter/3DTicTacToe">creator</a></span>
+						<p>An Artificial Intelligence project for exploring adversarial search. Plays 4x4x4 Tic Tac Toe. Uses minimax with alpha-beta pruning to play.</p>
+					</section>
+					</section>
+					<section>
 						<h3>A* Puzzle Solver</h3> <span class="after"><a href="https://github.com/MaxLeiter/SlidingNumberPuzzle">GitHub</a><a class="box" href="https://github.com/MaxLeiter/SlidingNumberPuzzle">creator</a></span>
-						<p>A simple AI for solving sliding block number puzzles. Written in Java for my Artificial Intelligence independent study in 2017.</p>
+						<p>An A* AI for solving sliding block number puzzles. Written in Java for my Artificial Intelligence independent study in 2017.</p>
 					</section>
 					<section>
 						<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> / <a href="https://maxleiter.github.io/jsonTree/">website</a> / <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
