--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Max Leiter</title>
 		<meta name="description" content="Max Leiter - a highschool student with a passion for technology. My personal website detailing projects, classes, and other work.">
+		<meta name="keywords" content="Max,Leiter,Max Leiter,highschool,projects,resume">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" href="css/normalize.min.css">
