Add work descriptions

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 				<aside>
 					<h3>Work Experience</h3>
 					<p>
-						<strong>Summer 2017</strong>
+						<strong>Summer 2017</strong> | <i>Student Intern</i> <br> Proctor Foundation, University of California, San Francisco, CA
 						<hr>
-						Student Intern &mdash; Proctor Foundation, University of California, San Francisco
+						Developed a Java application for accurately and consistently taking measurements of retinal images to assist opthamologists in diagnosing glaucoma.
 					</p>
 					<p>
-						<strong>Summer 2016</strong>
+						<strong>Summer 2016</strong> | <i>Technical Intern</i> <br> Five9 Network Systems, Rochester, NY
 						<hr>
-						Technical Intern &mdash; Five9 Network Systems
+						 Assisted in developing an in-house database for managing and cataloging parts and modified a Linux distribution for internal use that handles installation and configuration of software, upgrading firmware, installing drivers, and maintaining the system. The OS is on a LiveUSB with persistent data that runs in a system’s RAM.
 					</p>
 				</aside>
 				<aside>
