Add hackernews to sidebar

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 						<i class="ionicons ion-pound"></i>
 						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter">MaxLeiter on Freenode</a>
 					</p>
+					<p>
+						<i class="ionicons ion-social-hackernews"></i>
+						<a href="https://news.ycombinator.com/user?id=MaxLeiter">MaxLeiter on HackerNews</a>
+					</p>
 				</aside>
 				<aside>
 					<h3>Work Experience</h3>
