--- a/index.html
+++ b/index.html
@@ -57,24 +57,16 @@
 				</article>
 
 				<aside>
-					<h3>Max Leiter <span id="resume"><a href="mailto:contact@maxleiter.com">(Request resume)</a></span></h3>
-					<p>Highschool senior in the Bay Area.</p>
-					<p>
-						<i class="ionicons ion-social-github"></i>
-						<a href="https://github.com/MaxLeiter">MaxLeiter</a>
-					</p>
-					<p>
-						<i class="ionicons ion-edit"></i>
-						<a href="mailto:hello@maxleiter.com">hello@maxleiter.com</a>
-					</p>
-					<p>
-						<i class="ionicons ion-pound"></i>
-						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter">MaxLeiter on Freenode</a>
-					</p>
-					<p>
-						<i class="ionicons ion-social-hackernews"></i>
-						<a href="https://news.ycombinator.com/user?id=MaxLeiter">MaxLeiter on HackerNews</a>
-					</p>
+					<div class="profile">
+						<img src="images/profile.png" alt="Max Leiter">
+						<h1>Max Leiter</h1>
+						<p class="title">High school senior in the Bay Area</p>
+						<br>
+						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" title="GitHub"></i></a> 
+						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email"></i></a> 
+						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a> 
+						<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="Freenode"></i></a> 
+					</div>
 				</aside>
 				<aside>
 					<h3>Work Experience</h3>
