Update layout ordering and mobile border radius of asides

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
 	<body>
 		<div class="main-container">
 			<div class="main wrapper clearfix">
-
+				<aside>
+					<div class="profile">
+						<img src="images/profile.png" alt="Max Leiter">
+						<h1>Max Leiter</h1>
+						<p class="subtitle">High school senior in the Bay Area</p>
+						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" title="GitHub"></i></a>
+						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email"></i></a>
+						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
+						<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="Freenode"></i></a>
+					</div>
+				</aside>
 				<article>
 					<header>
 						<h1 class="header">My Projects</h1>
@@ -56,18 +66,6 @@
 					</section>
 				</article>
 
-				<aside>
-					<div class="profile">
-						<img src="images/profile.png" alt="Max Leiter">
-						<h1>Max Leiter</h1>
-						<p class="title">High school senior in the Bay Area</p>
-						<br>
-						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" title="GitHub"></i></a> 
-						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email"></i></a> 
-						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a> 
-						<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="Freenode"></i></a> 
-					</div>
-				</aside>
 				<aside>
 					<h3>Work Experience</h3>
 					<p>
