Add senior project

--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
 					</p>
 				</aside>
 				<aside>
-					<h3>Relevant Classes</h3>
+					<h3>Relevant Courses</h3>
+					<p>
+						<strong>Senior Project</strong>
+						<hr>
+						I am currently working with a fellow student to develop a convolutional neural network for detecting glaucoma using Java and TensorFlow.
+					</p>
 					<p>
 						<strong>Artificial Intelligence</strong>
 						<hr>
