Update senior project

--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
 					<p>
 						<strong>Senior Project</strong>
 						<hr>
-						I am currently working with a fellow student to develop a convolutional neural network for detecting glaucoma using Java and TensorFlow.
+						I am currently working with a fellow student to develop a convolutional neural network for detecting glaucoma using Java and DL4J.
 					</p>
 					<p>
 						<strong>Artificial Intelligence</strong>
 						<hr>
 						A semester long independent study using <i>Artificial Intelligence: A Modern Approach (Third edition)</i> by Stuart Russell and Peter Norvig.
-
 					</p>
 					<p>
 						<strong>Data Structures &amp; Algorithms</strong>
