Broken link fixed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					</section>
 					<section>
 						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> / <a href="https://thelounge.github.io">website</a> / <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
-						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/lounge/pull/1709">linking mentioned names in messages</a>, <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href=""https://github.com/thelounge/lounge/pull/1817">video</a> embed support, and (upcoming) <a href="https://github.com/thelounge/lounge/pull/1271">localization support</a>. </p>
+						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/lounge/pull/1709">linking mentioned names in messages</a>, <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support, and (upcoming) <a href="https://github.com/thelounge/lounge/pull/1271">localization support</a>. </p>
 					</section>
 				</article>
 
