Updated school and senior project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Max Leiter</title>
-		<meta name="description" content="Max Leiter - a highschool student with a passion for technology. My personal website detailing projects, classes, and other work.">
-		<meta name="keywords" content="Max,Leiter,Max Leiter,highschool,projects,resume">
+		<meta name="description" content="Max Leiter - a student with a passion for technology. My personal website detailing projects, classes, and other work.">
+		<meta name="keywords" content="Max,Leiter,Max Leiter,projects,resume">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" href="css/normalize.min.css">
@@ -25,7 +25,7 @@
 					<div class="profile">
 						<img src="images/profile.png" alt="Max Leiter">
 						<h1>Max Leiter</h1>
-						<p class="subtitle">High school senior in the Bay Area</p>
+						<p class="subtitle">University of Southern California</p>
 						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" title="GitHub"></i></a>
 						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email"></i></a>
 						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
@@ -86,7 +86,7 @@
 					<p>
 						<strong>Senior Project</strong>
 						<hr>
-						I am currently working with a fellow student to develop a convolutional neural network for detecting glaucoma using Java and DL4J.
+						Developed a neural network for diagnosing glaucoma from images with a fellow student. Achieved 70% accuracy, with great potential if more training images can be acquired.
 					</p>
 					<p>
 						<strong>Artificial Intelligence</strong>
