--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" title="GitHub"></i></a>
 						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email"></i></a>
 						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
-						<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="Freenode"></i></a>
+						<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
 					</div>
 				</aside>
 				<article>
