--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 						<img src="images/profile.png" alt="Max Leiter">
 						<h1>Max Leiter</h1>
 						<p class="subtitle">University of Southern California</p>
+						<p class="subtitle2">I'm passionate about programming, politics, and working out.</p>
 						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" title="GitHub"></i></a>
 						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email"></i></a>
 						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
