Add resume via printing

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 						<h1>Max Leiter</h1>
 						<p class="subtitle">University of Southern California</p>
 						<p class="subtitle2">I'm passionate about programming, politics, and working out.</p>
-						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" title="GitHub"></i></a>
-						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email"></i></a>
+						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
+						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email" data-link="hello@maxleiter.com"></i></a>
 						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
 						<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
 					</div>
 				</aside>
-				<article>
+				<article class="projects">
 					<header>
 						<h1 class="header">My Projects</h1>
 						<hr>
@@ -65,11 +65,11 @@
 					</section>
 					<section>
 						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> / <a href="https://thelounge.github.io">website</a> / <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
-						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://git<a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>,hub.com/thelounge/lounge/pull/1709">linking mentioned names in messages</a>, <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support, and (upcoming) <a href="https://github.com/thelounge/lounge/pull/1271">localization support</a>. </p>
+						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support, and (upcoming) <a href="https://github.com/thelounge/lounge/pull/1271">localization support</a>. </p>
 					</section>
 				</article>
 
-				<aside>
+				<aside class="work">
 					<h3>Work Experience</h3>
 					<p>
 						<strong>Summer 2017</strong> | <i>Student Intern</i> <br> Proctor Foundation, University of California, San Francisco, CA
@@ -82,7 +82,7 @@
 						 Assisted in developing an in-house database for managing and cataloging parts and modified a Linux distribution for internal use that handles installation and configuration of software, upgrading firmware, installing drivers, and maintaining the system. The OS is on a LiveUSB with persistent data that runs in a system’s RAM.
 					</p>
 				</aside>
-				<aside>
+				<aside class="courses">
 					<h3>Relevant Courses</h3>
 					<p>
 						<strong>Senior Project</strong>
