--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
 					<div class="profile">
 						<img src="images/profile.png" alt="Max Leiter">
 						<h1>Max Leiter</h1>
-						<p class="subtitle">University of Southern California</p>
+						<p class="subtitle">
+							University of Southern California <br>
+							<span class="small">Computer Science &amp; Computer Engineering</span>
+						</p>
 						<p class="subtitle2">I'm passionate about programming, politics, and working out.</p>
+						<a href=""><i class="site" data-link="https://maxleiter.com"></i></a>
 						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
 						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email" data-link="hello@maxleiter.com"></i></a>
 						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
@@ -48,7 +52,7 @@
 						<p>An A* AI for solving sliding block number puzzles. Written in Java for my Artificial Intelligence independent study in 2017.</p>
 					</section>
 					<section>
-						<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> / <a href="https://maxleiter.github.io/jsonTree/">website</a> / <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
+						<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
 						<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
 					</section>
 					<section>
@@ -60,17 +64,22 @@
 						<p>An asynchronous email client for your terminal. Contributions include <a href="https://github.com/SirCmpwn/aerc/pull/37">OS X support</a>, <a href="https://github.com/SirCmpwn/aerc/pull/57">command history</a>, and <a href="https://github.com/SirCmpwn/aerc/pull/95/files">general</a> <a href="https://github.com/SirCmpwn/aerc/pull/93/files">bug</a> <a href="https://github.com/SirCmpwn/aerc/pull/94">fixes.</a> </p>
 					</section>
 					<section>
-						<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> / <a href="http://knightos.org">website</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Aknightos+author%3AMaxLeiter&type=">contributor</a></span>
+						<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a href="http://knightos.org">website</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Aknightos+author%3AMaxLeiter&type=">contributor</a></span>
 						<p>An open-source unix-like operating system for z80-based calculators written entirely in z80 asm. I wrote C bindings for the both <a href="https://github.com/knightos/libc">the kernel</a> and <a href="https://github.com/KnightOS/corelib/blob/master/bindings.c">the userspace</a>. Additionally contributed to <a href="https://github.com/KnightOS/z80e">z80e</a>, the emulator, and wrote the <a href="http://www.knightos.org/documentation/tutorials/getting-started-c/">C tutorials.</a> </p>
 					</section>
 					<section>
-						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> / <a href="https://thelounge.github.io">website</a> / <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
+						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
 						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support, and (upcoming) <a href="https://github.com/thelounge/lounge/pull/1271">localization support</a>. </p>
 					</section>
 				</article>
 
 				<aside class="work">
 					<h3>Work Experience</h3>
+					<p>
+						<strong>Summer 2018</strong> | <i>Event Staff</i> <br> The Mountain Winery, Saratoga, CA
+						<hr>
+						Learned valuable skills regarding customer service and conflict resolution. General event security, guest services, crowd management, and event safety.
+					</p>
 					<p>
 						<strong>Summer 2017</strong> | <i>Student Intern</i> <br> Proctor Foundation, University of California, San Francisco, CA
 						<hr>
