--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</section>
 					<section>
 						<h3>lounge-bot</h3> <span class="after"><a href="https://github.com/thelounge/lounge-bot">GitHub</a><a class="box" href="https://github.com/thelounge/lounge-bot">creator</a></span>
-						<p>A modular JavaScript IRC bot for <code>#thelounge</code> on Freenode. It's primary use is fetching  requested issue and pull request information.</p>
+						<p>A modular JavaScript IRC bot for <code>#thelounge</code> on Freenode. Its primary use is fetching  requested issue and pull request information.</p>
 					</section>
 					<section>
 						<h3>aerc</h3> <span class="after"><a href="https://github.com/sircmpwn/aerc">GitHub</a><a class="box" href="https://github.com/SirCmpwn/aerc/commits?author=MaxLeiter">contributor</a></span>
