--- a/index.html
+++ b/index.html
@@ -69,25 +69,31 @@
 					</section>
 					<section>
 						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
-						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support, and (upcoming) <a href="https://github.com/thelounge/lounge/pull/1271">localization support</a>. </p>
+						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, and <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support. </p>
 					</section>
 				</article>
 
 				<aside class="work">
 					<h3>Work Experience</h3>
 					<p>
-						<strong>Summer 2018</strong> | <i>Event Staff</i> <br> The Mountain Winery, Saratoga, CA
-						<hr>
+						<p>
+							<strong>Summer 2018</strong> | <i>Event Staff</i> <br> The Mountain Winery, Saratoga, CA
+						</p>
+
 						Learned valuable skills regarding customer service and conflict resolution. General event security, guest services, crowd management, and event safety.
 					</p>
+					<hr>
 					<p>
-						<strong>Summer 2017</strong> | <i>Student Intern</i> <br> Proctor Foundation, University of California, San Francisco, CA
-						<hr>
+						<p>
+							<strong>Summer 2017</strong> | <i>Student Intern</i> <br> Proctor Foundation, University of California, San Francisco, CA
+						</p>
 						Developed a Java application for accurately and consistently taking measurements of retinal images to assist opthamologists in diagnosing glaucoma.
 					</p>
+					<hr>
 					<p>
-						<strong>Summer 2016</strong> | <i>Technical Intern</i> <br> Five9 Network Systems, Rochester, NY
-						<hr>
+						<p>
+							<strong>Summer 2016</strong> | <i>Technical Intern</i> <br> Five9 Network Systems, Rochester, NY
+						</p>
 						 Assisted in developing an in-house database for managing and cataloging parts and modified a Linux distribution for internal use that handles installation and configuration of software, upgrading firmware, installing drivers, and maintaining the system. The OS is on a LiveUSB with persistent data that runs in a system’s RAM.
 					</p>
 				</aside>
