--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<img src="images/profile.png" alt="Max Leiter">
 						<h1>Max Leiter</h1>
 						<p class="subtitle">
-							University of Southern California <br>
+							University of Southern California 2022<br>
 							<span class="small">Computer Science &amp; Computer Engineering</span>
 						</p>
 						<p class="subtitle2">I'm passionate about programming, politics, and working out.</p>
@@ -39,9 +39,21 @@
 				</aside>
 				<article class="projects">
 					<header>
-						<h1 class="header">My Projects</h1>
+						<h2 class="header">My Projects</h2>
 						<hr>
 					</header>
+					<section>
+						<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
+						<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
+					</section>
+					<section>
+						<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a href="http://knightos.org">website</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Aknightos+author%3AMaxLeiter&type=">contributor</a></span>
+						<p>An open-source unix-like operating system for z80-based calculators written entirely in z80 asm. I wrote C bindings for the both <a href="https://github.com/knightos/libc">the kernel</a> and <a href="https://github.com/KnightOS/corelib/blob/master/bindings.c">the userspace</a>. Additionally contributed to <a href="https://github.com/KnightOS/z80e">z80e</a>, the emulator, and wrote the <a href="http://www.knightos.org/documentation/tutorials/getting-started-c/">C tutorials.</a> </p>
+					</section>
+					<section>
+						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
+						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, and <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support. </p>
+					</section>
 					<section>
 						<h3>3D Tic Tac Toe AI</h3> <span class="after"><a href="https://github.com/MaxLeiter/3DTicTacToe">GitHub</a><a class="box" href="https://github.com/MaxLeiter/3DTicTacToe">creator</a></span>
 						<p>An Artificial Intelligence project for exploring adversarial search. Plays 4x4x4 Tic Tac Toe. Uses minimax with alpha-beta pruning to play.</p>
@@ -52,10 +64,6 @@
 						<p>An A* AI for solving sliding block number puzzles. Written in Java for my Artificial Intelligence independent study in 2017.</p>
 					</section>
 					<section>
-						<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
-						<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
-					</section>
-					<section>
 						<h3>lounge-bot</h3> <span class="after"><a href="https://github.com/thelounge/lounge-bot">GitHub</a><a class="box" href="https://github.com/thelounge/lounge-bot">creator</a></span>
 						<p>A modular JavaScript IRC bot for <code>#thelounge</code> on Freenode. Its primary use is fetching  requested issue and pull request information.</p>
 					</section>
@@ -63,24 +71,15 @@
 						<h3>aerc</h3> <span class="after"><a href="https://github.com/sircmpwn/aerc">GitHub</a><a class="box" href="https://github.com/SirCmpwn/aerc/commits?author=MaxLeiter">contributor</a></span>
 						<p>An asynchronous email client for your terminal. Contributions include <a href="https://github.com/SirCmpwn/aerc/pull/37">OS X support</a>, <a href="https://github.com/SirCmpwn/aerc/pull/57">command history</a>, and <a href="https://github.com/SirCmpwn/aerc/pull/95/files">general</a> <a href="https://github.com/SirCmpwn/aerc/pull/93/files">bug</a> <a href="https://github.com/SirCmpwn/aerc/pull/94">fixes.</a> </p>
 					</section>
-					<section>
-						<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a href="http://knightos.org">website</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Aknightos+author%3AMaxLeiter&type=">contributor</a></span>
-						<p>An open-source unix-like operating system for z80-based calculators written entirely in z80 asm. I wrote C bindings for the both <a href="https://github.com/knightos/libc">the kernel</a> and <a href="https://github.com/KnightOS/corelib/blob/master/bindings.c">the userspace</a>. Additionally contributed to <a href="https://github.com/KnightOS/z80e">z80e</a>, the emulator, and wrote the <a href="http://www.knightos.org/documentation/tutorials/getting-started-c/">C tutorials.</a> </p>
-					</section>
-					<section>
-						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
-						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, and <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support. </p>
-					</section>
 				</article>
 
 				<aside class="work">
-					<h3>Work Experience</h3>
+					<h2>Work Experience</h2>
 					<p>
 						<p>
 							<strong>Summer 2018</strong> | <i>Event Staff</i> <br> The Mountain Winery, Saratoga, CA
 						</p>
-
-						Learned valuable skills regarding customer service and conflict resolution. General event security, guest services, crowd management, and event safety.
+						General event security, guest services, crowd management, and event safety.
 					</p>
 					<hr>
 					<p>
