--- a/index.html
+++ b/index.html
@@ -37,6 +37,59 @@
 						<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
 					</div>
 				</aside>
+				<aside class="skills">
+					<h2>Skills</h2>
+					<div class="skills-grid-container">
+						<span>
+							<p>
+								<strong>Programming</strong> <br>
+								Java, JavaScript, HTML/CSS, z80 asm
+							</p>
+						</span>
+						<span>
+							<p>
+								<strong>Frameworks</strong> <br>
+								NodeJS, Socket.io, AngularJS, Vue, Bootstrap, jQuery
+							</p>
+						</span>
+						<span>
+							<p>
+								<strong>Software</strong> <br>
+								Blender, SolidWorks, Excel/Office, Git, Docker
+							</p>
+						</span>
+						<span>
+							<p>
+								<strong>Languages</strong> <br>
+								English, French
+							</p>
+						</span>
+					</div>
+				</aside>
+				<aside class="work">
+					<h2>Work Experience</h2>
+					<p>
+						<p>
+							<strong>Summer 2018</strong> | Event Staff <br> <i>The Mountain Winery, Saratoga, CA</i> <br>
+							General event security, guest services, crowd management, and event safety.
+						</p>
+
+					</p>
+					<hr>
+					<p>
+						<p>
+							<strong>Summer 2017</strong> | Student Intern <br> <i>Proctor Foundation, University of California, San Francisco, CA</i> <br>
+							Developed a Java application for accurately and consistently taking measurements of retinal images to assist ophthamologists in diagnosing glaucoma.
+						</p>
+					</p>
+					<hr>
+					<p>
+						<p>
+							<strong>Summer 2016</strong> | Technical Intern <br> <i>Five9 Network Systems, Rochester, NY</i><br>
+							Assisted in developing an in-house database for managing and cataloging parts and modified a Linux distribution for internal use that handles installation and configuration of software, upgrading firmware, installing drivers, and maintaining the system. The OS is on a LiveUSB with persistent data that runs in a system’s RAM.
+						</p>
+					</p>
+				</aside>
 				<article class="projects">
 					<header>
 						<h2 class="header">My Projects</h2>
@@ -72,53 +125,6 @@
 						<p>An asynchronous email client for your terminal. Contributions include <a href="https://github.com/SirCmpwn/aerc/pull/37">OS X support</a>, <a href="https://github.com/SirCmpwn/aerc/pull/57">command history</a>, and <a href="https://github.com/SirCmpwn/aerc/pull/95/files">general</a> <a href="https://github.com/SirCmpwn/aerc/pull/93/files">bug</a> <a href="https://github.com/SirCmpwn/aerc/pull/94">fixes.</a> </p>
 					</section>
 				</article>
-
-				<aside class="work">
-					<h2>Work Experience</h2>
-					<p>
-						<p>
-							<strong>Summer 2018</strong> | <i>Event Staff</i> <br> The Mountain Winery, Saratoga, CA
-						</p>
-						General event security, guest services, crowd management, and event safety.
-					</p>
-					<hr>
-					<p>
-						<p>
-							<strong>Summer 2017</strong> | <i>Student Intern</i> <br> Proctor Foundation, University of California, San Francisco, CA
-						</p>
-						Developed a Java application for accurately and consistently taking measurements of retinal images to assist opthamologists in diagnosing glaucoma.
-					</p>
-					<hr>
-					<p>
-						<p>
-							<strong>Summer 2016</strong> | <i>Technical Intern</i> <br> Five9 Network Systems, Rochester, NY
-						</p>
-						 Assisted in developing an in-house database for managing and cataloging parts and modified a Linux distribution for internal use that handles installation and configuration of software, upgrading firmware, installing drivers, and maintaining the system. The OS is on a LiveUSB with persistent data that runs in a system’s RAM.
-					</p>
-				</aside>
-				<aside class="courses">
-					<h3>Relevant Courses</h3>
-					<p>
-						<strong>Senior Project</strong>
-						<hr>
-						Developed a neural network for diagnosing glaucoma from images with a fellow student. Achieved 70% accuracy, with great potential if more training images can be acquired.
-					</p>
-					<p>
-						<strong>Artificial Intelligence</strong>
-						<hr>
-						A semester long independent study using <i>Artificial Intelligence: A Modern Approach (Third edition)</i> by Stuart Russell and Peter Norvig.
-					</p>
-					<p>
-						<strong>Data Structures &amp; Algorithms</strong>
-						<hr>
-						An advanced (for highschool) computer science course using <i>Algorithms, 4th Edition</i> by Robert Sedgewick and Kevin Wayne. Covered sorting, searching, and graph theory.
-					</p>
-					<p>
-						<strong>AP Computer Science</strong>
-						<hr>
-						Re-enforced concepts that were previously self-taught.
-					</p>
-				</aside>
 			</div>
 		</div>
 
