Improve resume, remove hr in work experience

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<span>
 							<p>
 								<strong>Frameworks</strong> <br>
-								NodeJS, Socket.io, AngularJS, Vue, Bootstrap, jQuery
+								Node.js, Socket.io, Angular, Vue.js, Bootstrap, jQuery
 							</p>
 						</span>
 						<span>
