--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<p>
 						<p>
 							<strong>Summer 2017</strong> | Student Intern <br> <i>Proctor Foundation, University of California, San Francisco, CA</i> <br>
-							Developed a Java application for accurately and consistently taking measurements of retinal images to assist ophthamologists in diagnosing glaucoma.
+							Developed a Java application for accurately and consistently taking measurements of retinal images to assist ophthalmologists in diagnosing glaucoma.
 						</p>
 					</p>
 					<hr>
