Add extracurriculars section

--- a/index.html
+++ b/index.html
@@ -86,8 +86,15 @@
 					<p>
 						<p>
 							<strong>Summer 2016</strong> | Technical Intern <br> <i>Five9 Network Systems, Rochester, NY</i><br>
-							Assisted in developing an in-house database for managing and cataloging parts and modified a Linux distribution for internal use that handles installation and configuration of software, upgrading firmware, installing drivers, and maintaining the system. The OS is on a LiveUSB with persistent data that runs in a system’s RAM.
+							Assisted in developing an in-house database for managing and cataloging parts and modified a Linux distribution for internal use that handles maintaining the system.
 						</p>
+					</p>
+				</aside>
+				<aside class="extracurricular">
+					<h2>Extracurriculars</h2>
+					<p>
+						Member of Theta Tau, USC's Professional Engineering Fraternity.
+						Also, an avid snowboarder, longboarder, and baseball catcher.
 					</p>
 				</aside>
 				<article class="projects">
@@ -105,7 +112,7 @@
 					</section>
 					<section>
 						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
-						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/845">away-notify support</a>, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, and <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support. </p>
+						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, and <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support. </p>
 					</section>
 					<section>
 						<h3>3D Tic Tac Toe AI</h3> <span class="after"><a href="https://github.com/MaxLeiter/3DTicTacToe">GitHub</a><a class="box" href="https://github.com/MaxLeiter/3DTicTacToe">creator</a></span>
@@ -125,6 +132,7 @@
 						<p>An asynchronous email client for your terminal. Contributions include <a href="https://github.com/SirCmpwn/aerc/pull/37">OS X support</a>, <a href="https://github.com/SirCmpwn/aerc/pull/57">command history</a>, and <a href="https://github.com/SirCmpwn/aerc/pull/95/files">general</a> <a href="https://github.com/SirCmpwn/aerc/pull/93/files">bug</a> <a href="https://github.com/SirCmpwn/aerc/pull/94">fixes.</a> </p>
 					</section>
 				</article>
+
 			</div>
 		</div>
 
