Slight layout tweaks

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 						<img src="images/profile.png" alt="Max Leiter">
 						<h1>Max Leiter</h1>
 						<p class="subtitle">
-							University of Southern California 2022<br>
-							<span class="small">Computer Science &amp; Computer Engineering</span>
+							<b> University of Southern California, Freshmen</b><br>
+							<span class="small">Computer Science &amp; Business Administration</span>
 						</p>
 						<p class="subtitle2">I'm passionate about programming, politics, and working out.</p>
 						<a href=""><i class="site" data-link="https://maxleiter.com"></i></a>
@@ -36,6 +36,30 @@
 						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
 						<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
 					</div>
+				</aside>
+				<aside class="work">
+					<h2>Work Experience</h2>
+					<p>
+						<p>
+							<strong>Summer 2018</strong> | Event Staff <br> <i>The Mountain Winery, Saratoga, CA</i> <br>
+							General event security, guest services, crowd management, and event safety.
+						</p>
+
+					</p>
+					<hr>
+					<p>
+						<p>
+							<strong>Summer 2017</strong> | Student Intern <br> <i>Proctor Foundation, University of California, San Francisco, CA</i> <br>
+							Developed a Java application for accurately and consistently taking measurements of retinal images to assist ophthalmologists in diagnosing glaucoma.
+						</p>
+					</p>
+					<hr>
+					<p>
+						<p>
+							<strong>Summer 2016</strong> | Technical Intern <br> <i>Five9 Network Systems, Rochester, NY</i><br>
+							Assisted in developing an in-house database for managing and cataloging parts and modified a Linux distribution for internal use that handles maintaining the system.
+						</p>
+					</p>
 				</aside>
 				<aside class="skills">
 					<h2>Skills</h2>
@@ -65,30 +89,6 @@
 							</p>
 						</span>
 					</div>
-				</aside>
-				<aside class="work">
-					<h2>Work Experience</h2>
-					<p>
-						<p>
-							<strong>Summer 2018</strong> | Event Staff <br> <i>The Mountain Winery, Saratoga, CA</i> <br>
-							General event security, guest services, crowd management, and event safety.
-						</p>
-
-					</p>
-					<hr>
-					<p>
-						<p>
-							<strong>Summer 2017</strong> | Student Intern <br> <i>Proctor Foundation, University of California, San Francisco, CA</i> <br>
-							Developed a Java application for accurately and consistently taking measurements of retinal images to assist ophthalmologists in diagnosing glaucoma.
-						</p>
-					</p>
-					<hr>
-					<p>
-						<p>
-							<strong>Summer 2016</strong> | Technical Intern <br> <i>Five9 Network Systems, Rochester, NY</i><br>
-							Assisted in developing an in-house database for managing and cataloging parts and modified a Linux distribution for internal use that handles maintaining the system.
-						</p>
-					</p>
 				</aside>
 				<aside class="extracurricular">
 					<h2>Extracurriculars</h2>
