--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html class="no-js" lang="">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Max Leiter</title>
-		<meta name="description" content="Max Leiter - a student with a passion for technology. My personal website detailing projects, classes, and other work.">
-		<meta name="keywords" content="Max,Leiter,Max Leiter,projects,resume">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Max Leiter</title>
+	<meta name="description" content="Max Leiter - a student with a passion for technology. My personal website detailing projects, classes, and other work.">
+	<meta name="keywords" content="Max,Leiter,Max Leiter,projects,resume">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="stylesheet" href="css/normalize.min.css">
-		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-		<link rel="icon" href="images/favicon.ico">
+	<link rel="stylesheet" href="css/normalize.min.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="icon" href="images/favicon.ico">
 
 		<!--[if lt IE 9]>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -29,10 +29,9 @@
 							<b> University of Southern California, Freshmen</b><br>
 							<span class="small">Computer Science &amp; Business Administration</span>
 						</p>
-						<p class="subtitle2">I'm passionate about programming, politics, and working out.</p>
 						<a href=""><i class="site" data-link="https://maxleiter.com"></i></a>
 						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
-						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email" data-link="hello@maxleiter.com"></i></a>
+						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email" data-link="maxwell.leiter@gmail.com"></i></a>
 						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
 						<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
 					</div>
@@ -73,7 +72,7 @@
 						<span>
 							<p>
 								<strong>Frameworks</strong> <br>
-								Node.js, Socket.io, Angular, Vue.js, Bootstrap, jQuery
+								Node.js, Socketo, Angular, Vue.js, Bootstrap, jQuery
 							</p>
 						</span>
 						<span>
@@ -90,58 +89,60 @@
 						</span>
 					</div>
 				</aside>
-				<aside class="extracurricular">
+     <!-- 
+    		<aside class="extracurricular">
 					<h2>Extracurriculars</h2>
 					<p>
 						Member of Theta Tau, USC's Professional Engineering Fraternity.
 						Also, an avid snowboarder, longboarder, and baseball catcher.
 					</p>
-				</aside>
-				<article class="projects">
-					<header>
-						<h2 class="header">My Projects</h2>
-						<hr>
-					</header>
-					<section>
-						<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
-						<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
-					</section>
-					<section>
-						<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a href="http://knightos.org">website</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Aknightos+author%3AMaxLeiter&type=">contributor</a></span>
-						<p>An open-source unix-like operating system for z80-based calculators written entirely in z80 asm. I wrote C bindings for the both <a href="https://github.com/knightos/libc">the kernel</a> and <a href="https://github.com/KnightOS/corelib/blob/master/bindings.c">the userspace</a>. Additionally contributed to <a href="https://github.com/KnightOS/z80e">z80e</a>, the emulator, and wrote the <a href="http://www.knightos.org/documentation/tutorials/getting-started-c/">C tutorials.</a> </p>
-					</section>
-					<section>
-						<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
-						<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, and <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support. </p>
-					</section>
-					<section>
-						<h3>3D Tic Tac Toe AI</h3> <span class="after"><a href="https://github.com/MaxLeiter/3DTicTacToe">GitHub</a><a class="box" href="https://github.com/MaxLeiter/3DTicTacToe">creator</a></span>
-						<p>An Artificial Intelligence project for exploring adversarial search. Plays 4x4x4 Tic Tac Toe. Uses minimax with alpha-beta pruning to play.</p>
-					</section>
-					</section>
-					<section>
-						<h3>A* Puzzle Solver</h3> <span class="after"><a href="https://github.com/MaxLeiter/SlidingNumberPuzzle">GitHub</a><a class="box" href="https://github.com/MaxLeiter/SlidingNumberPuzzle">creator</a></span>
-						<p>An A* AI for solving sliding block number puzzles. Written in Java for my Artificial Intelligence independent study in 2017.</p>
-					</section>
-					<section>
-						<h3>lounge-bot</h3> <span class="after"><a href="https://github.com/thelounge/lounge-bot">GitHub</a><a class="box" href="https://github.com/thelounge/lounge-bot">creator</a></span>
-						<p>A modular JavaScript IRC bot for <code>#thelounge</code> on Freenode. Its primary use is fetching  requested issue and pull request information.</p>
-					</section>
-					<section>
-						<h3>aerc</h3> <span class="after"><a href="https://github.com/sircmpwn/aerc">GitHub</a><a class="box" href="https://github.com/SirCmpwn/aerc/commits?author=MaxLeiter">contributor</a></span>
-						<p>An asynchronous email client for your terminal. Contributions include <a href="https://github.com/SirCmpwn/aerc/pull/37">OS X support</a>, <a href="https://github.com/SirCmpwn/aerc/pull/57">command history</a>, and <a href="https://github.com/SirCmpwn/aerc/pull/95/files">general</a> <a href="https://github.com/SirCmpwn/aerc/pull/93/files">bug</a> <a href="https://github.com/SirCmpwn/aerc/pull/94">fixes.</a> </p>
-					</section>
-				</article>
+				</aside> 
+			-->
+			<article class="projects">
+				<header>
+					<h2 class="header">My Projects</h2>
+					<hr>
+				</header>
+				<section>
+					<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
+					<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
+				</section>
+				<section>
+					<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a href="http://knightos.org">website</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Aknightos+author%3AMaxLeiter&type=">contributor</a></span>
+					<p>An open-source unix-like operating system for z80-based calculators written entirely in z80 asm. I wrote C bindings for the both <a href="https://github.com/knightos/libc">the kernel</a> and <a href="https://github.com/KnightOS/corelib/blob/master/bindings.c">the userspace</a>. Additionally contributed to <a href="https://github.com/KnightOS/z80e">z80e</a>, the emulator, and wrote the <a href="http://www.knightos.org/documentation/tutorials/getting-started-c/">C tutorials.</a> </p>
+				</section>
+				<section>
+					<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
+					<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, and <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support. </p>
+				</section>
+				<section>
+					<h3>3D Tic Tac Toe AI</h3> <span class="after"><a href="https://github.com/MaxLeiter/3DTicTacToe">GitHub</a><a class="box" href="https://github.com/MaxLeiter/3DTicTacToe">creator</a></span>
+					<p>An Artificial Intelligence project for exploring adversarial search. Plays 4x4x4 Tic Tac Toe. Uses minimax with alpha-beta pruning to play.</p>
+				</section>
+			</section>
+			<section>
+				<h3>A* Puzzle Solver</h3> <span class="after"><a href="https://github.com/MaxLeiter/SlidingNumberPuzzle">GitHub</a><a class="box" href="https://github.com/MaxLeiter/SlidingNumberPuzzle">creator</a></span>
+				<p>An A* AI for solving sliding block number puzzles. Written in Java for my Artificial Intelligence independent study in 2017.</p>
+			</section>
+			<section>
+				<h3>lounge-bot</h3> <span class="after"><a href="https://github.com/thelounge/lounge-bot">GitHub</a><a class="box" href="https://github.com/thelounge/lounge-bot">creator</a></span>
+				<p>A modular JavaScript IRC bot for <code>#thelounge</code> on Freenode. Its primary use is fetching  requested issue and pull request information.</p>
+			</section>
+			<section>
+				<h3>aerc</h3> <span class="after"><a href="https://github.com/sircmpwn/aerc">GitHub</a><a class="box" href="https://github.com/SirCmpwn/aerc/commits?author=MaxLeiter">contributor</a></span>
+				<p>An asynchronous email client for your terminal. Contributions include <a href="https://github.com/SirCmpwn/aerc/pull/37">OS X support</a>, <a href="https://github.com/SirCmpwn/aerc/pull/57">command history</a>, and <a href="https://github.com/SirCmpwn/aerc/pull/95/files">general</a> <a href="https://github.com/SirCmpwn/aerc/pull/93/files">bug</a> <a href="https://github.com/SirCmpwn/aerc/pull/94">fixes.</a> </p>
+			</section>
+		</article>
 
-			</div>
-		</div>
+	</div>
+</div>
 
-		<div class="footer-container">
-			<footer class="wrapper">
-				<h3>Max Leiter</h3>
-				<a href="https://github.com/MaxLeiter/maxleiter.github.io" id="source">Source on GitHub</a>
-			</footer>
-		</div>
+<div class="footer-container">
+	<footer class="wrapper">
+		<h3>Max Leiter</h3>
+		<a href="https://github.com/MaxLeiter/maxleiter.github.io" id="source">Source on GitHub</a>
+	</footer>
+</div>
 
-	</body>
+</body>
 </html>
