resume update, remove languages

--- a/index.html
+++ b/index.html
@@ -72,19 +72,13 @@
 						<span>
 							<p>
 								<strong>Frameworks</strong> <br>
-								Node.js, Socketo, Angular, Vue.js, Bootstrap, jQuery
+								Node.js, Socket.io, Angular, Vue.js, Bootstrap, jQuery
 							</p>
 						</span>
 						<span>
 							<p>
 								<strong>Software</strong> <br>
 								Blender, SolidWorks, Excel/Office, Git, Docker
-							</p>
-						</span>
-						<span>
-							<p>
-								<strong>Languages</strong> <br>
-								English, French
 							</p>
 						</span>
 					</div>
