--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<img src="images/profile.png" alt="Max Leiter">
 						<h1>Max Leiter</h1>
 						<p class="subtitle">
-							<b> University of Southern California, Freshmen</b><br>
+							<b> University of Southern California, Sophomore</b><br>
 							<span class="small">Computer Science &amp; Business Administration</span>
 						</p>
 						<a href=""><i class="site" data-link="https://maxleiter.com"></i></a>
@@ -40,8 +40,16 @@
 					<h2>Work Experience</h2>
 					<p>
 						<p>
-							<strong>Summer 2018</strong> | Event Staff <br> <i>The Mountain Winery, Saratoga, CA</i> <br>
-							General event security, guest services, crowd management, and event safety.
+							<strong>Fall 2019</strong> | Software Developer <br> <i>USC Annenberg Media, Los Angeles, CA</i> <br>
+							Currently handling all development related to the official Annenberg Media app, Annie. Re-wrote and re-designed the existing Ionic app with React and Cordova. 
+						</p>
+
+					</p>
+					<hr>
+					<p>
+						<p>
+							<strong>Summer 2019</strong> | Software Developer <br> <i>BlitzIQ, San Francisco, CA</i> <br>
+							Full-stack (largely JavaScript) development with a focus on the front-end. Technologies consisted of React, Redux, MongoDB, material-ui,apex-charts, CircleCI, AWS, and nginx.
 						</p>
 
 					</p>
@@ -49,7 +57,7 @@
 					<p>
 						<p>
 							<strong>Summer 2017</strong> | Student Intern <br> <i>Proctor Foundation, University of California, San Francisco, CA</i> <br>
-							Developed a Java application for accurately and consistently taking measurements of retinal images to assist ophthalmologists in diagnosing glaucoma.
+							Developed a Java application for accurately and consistently taking measurements of retinal images to assist ophthalmologists in diagnosing glaucoma. <i><a class="paper-link" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0220362#sec013">Paper available here</a></i>
 						</p>
 					</p>
 					<hr>
@@ -71,8 +79,8 @@
 						</span>
 						<span>
 							<p>
-								<strong>Frameworks</strong> <br>
-								Node.js, Socket.io, Angular, Vue.js, Bootstrap, jQuery
+								<strong>Frameworks & Libraries</strong> <br>
+								Node.js, React, Socket.io, Angular, Vue.js, Bootstrap, jQuery
 							</p>
 						</span>
 						<span>
