--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<p>
 						<p>
 							<strong>Summer 2019</strong> | Software Developer <br> <i>BlitzIQ, San Francisco, CA</i> <br>
-							Full-stack (largely JavaScript) development with a focus on the front-end. Technologies consisted of React, Redux, MongoDB, material-ui,apex-charts, CircleCI, AWS, and nginx.
+							Full-stack (largely JavaScript) development with a focus on the front-end. Technologies consisted of React, Redux, MongoDB, material-ui, CircleCI, AWS, and nginx.
 						</p>
 
 					</p>
