Project and job updates

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 					<p>
 						<p>
 							<strong>Fall 2019</strong> | Software Developer <br> <i>USC Annenberg Media, Los Angeles, CA</i> <br>
-							Currently handling all development related to the official Annenberg Media app, Annie. Re-wrote and re-designed the existing Ionic app with React and Cordova. 
+							Currently handling all development related to the official Annenberg Media app, Annie. 
 						</p>
-
 					</p>
 					<hr>
 					<p>
@@ -74,7 +73,7 @@
 						<span>
 							<p>
 								<strong>Programming</strong> <br>
-								Java, JavaScript, HTML/CSS, z80 asm
+								Java, JavaScript, C++
 							</p>
 						</span>
 						<span>
@@ -86,7 +85,7 @@
 						<span>
 							<p>
 								<strong>Software</strong> <br>
-								Blender, SolidWorks, Excel/Office, Git, Docker
+								Blender, SolidWorks, Excel/Office, Git, Docker, AWS, CircleCI
 							</p>
 						</span>
 					</div>
@@ -106,6 +105,10 @@
 					<hr>
 				</header>
 				<section>
+					<h3>Annie</h3>
+					<p>Annie is the official app for the University of Southern California's <a href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>. I re-wrote the existing Ionic app with React, Redux, material-ui, and Cordova. The app features an innovative news feed and an interative chat bot for best engaging with the student and faculty populations at USC.</p>
+				</section>
+				<section>
 					<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
 					<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
 				</section>
@@ -123,16 +126,8 @@
 				</section>
 			</section>
 			<section>
-				<h3>A* Puzzle Solver</h3> <span class="after"><a href="https://github.com/MaxLeiter/SlidingNumberPuzzle">GitHub</a><a class="box" href="https://github.com/MaxLeiter/SlidingNumberPuzzle">creator</a></span>
-				<p>An A* AI for solving sliding block number puzzles. Written in Java for my Artificial Intelligence independent study in 2017.</p>
-			</section>
-			<section>
-				<h3>lounge-bot</h3> <span class="after"><a href="https://github.com/thelounge/lounge-bot">GitHub</a><a class="box" href="https://github.com/thelounge/lounge-bot">creator</a></span>
+				<h3>thelounge-bot</h3> <span class="after"><a href="https://github.com/thelounge/lounge-bot">GitHub</a><a class="box" href="https://github.com/thelounge/lounge-bot">creator</a></span>
 				<p>A modular JavaScript IRC bot for <code>#thelounge</code> on Freenode. Its primary use is fetching  requested issue and pull request information.</p>
-			</section>
-			<section>
-				<h3>aerc</h3> <span class="after"><a href="https://github.com/sircmpwn/aerc">GitHub</a><a class="box" href="https://github.com/SirCmpwn/aerc/commits?author=MaxLeiter">contributor</a></span>
-				<p>An asynchronous email client for your terminal. Contributions include <a href="https://github.com/SirCmpwn/aerc/pull/37">OS X support</a>, <a href="https://github.com/SirCmpwn/aerc/pull/57">command history</a>, and <a href="https://github.com/SirCmpwn/aerc/pull/95/files">general</a> <a href="https://github.com/SirCmpwn/aerc/pull/93/files">bug</a> <a href="https://github.com/SirCmpwn/aerc/pull/94">fixes.</a> </p>
 			</section>
 		</article>
 
